initial event and transition creation implimented

--- a/test/acceptance.html
+++ b/test/acceptance.html
@@ -15,10 +15,14 @@
 <script type="text/javascript" src="../state_machine.js"></script>
 <script type="text/javascript" src="../lib/machine.js"></script>
 <script type="text/javascript" src="../lib/state.js"></script>
+<script type="text/javascript" src="../lib/event.js"></script>
+<script type="text/javascript" src="../lib/event_collection.js"></script>
+<script type="text/javascript" src="../lib/state_collection.js"></script>
 
 <!-- Test suit -->
 <script type="text/javascript" src="js/test_runner.js"></script>
 <script type="text/javascript" src="js/state_machine_tests.js"></script>
+<script type="text/javascript" src="js/transition_tests.js"></script>
 
 </head>
 
