--- a/test/acceptance.html
+++ b/test/acceptance.html
@@ -16,13 +16,18 @@
 <script type="text/javascript" src="../lib/machine.js"></script>
 <script type="text/javascript" src="../lib/state.js"></script>
 <script type="text/javascript" src="../lib/event.js"></script>
-<script type="text/javascript" src="../lib/event_collection.js"></script>
+<script type="text/javascript" src="../lib/guard.js"></script>
+<script type="text/javascript" src="../lib/transition.js"></script>
 <script type="text/javascript" src="../lib/state_collection.js"></script>
+<script type="text/javascript" src="../lib/event_collection.js"></script>
+<script type="text/javascript" src="../lib/guard_collection.js"></script>
+
 
 <!-- Test suit -->
 <script type="text/javascript" src="js/test_runner.js"></script>
 <script type="text/javascript" src="js/state_machine_tests.js"></script>
 <script type="text/javascript" src="js/transition_tests.js"></script>
+<script type="text/javascript" src="js/event_tests.js"></script>
 
 </head>
 
