--- a/test/acceptance.html
+++ b/test/acceptance.html
@@ -12,15 +12,15 @@
 <script src="js/yui/build/yui/yui-min.js" type="text/javascript"></script> 
 
 <!--  jsMocha -->
-<script type="text/javascript" src="../state_machine.js"></script>
-<script type="text/javascript" src="../lib/machine.js"></script>
-<script type="text/javascript" src="../lib/state.js"></script>
-<script type="text/javascript" src="../lib/event.js"></script>
-<script type="text/javascript" src="../lib/guard.js"></script>
-<script type="text/javascript" src="../lib/transition.js"></script>
-<script type="text/javascript" src="../lib/state_collection.js"></script>
-<script type="text/javascript" src="../lib/event_collection.js"></script>
-<script type="text/javascript" src="../lib/guard_collection.js"></script>
+<script type="text/javascript" src="../lib/state_machine.js"></script>
+<script type="text/javascript" src="../lib/state_machine/machine.js"></script>
+<script type="text/javascript" src="../lib/state_machine/state.js"></script>
+<script type="text/javascript" src="../lib/state_machine/event.js"></script>
+<script type="text/javascript" src="../lib/state_machine/guard.js"></script>
+<script type="text/javascript" src="../lib/state_machine/transition.js"></script>
+<script type="text/javascript" src="../lib/state_machine/state_collection.js"></script>
+<script type="text/javascript" src="../lib/state_machine/event_collection.js"></script>
+<script type="text/javascript" src="../lib/state_machine/guard_collection.js"></script>
 
 
 <!-- Test suit -->
