--- a/test/acceptance.html
+++ b/test/acceptance.html
@@ -1,8 +1,8 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
 <html>
 <head>
-    <meta http-equiv="content-type" content="text/html; charset=utf-8">
-    <title>js_state_machine - Acceptance tests</title>
+<meta http-equiv="content-type" content="text/html; charset=utf-8">
+<title>js_state_machine - Acceptance tests</title>
 
 <link rel="stylesheet" type="text/css" href="http://yui.yahooapis.com/2.5.2/build/logger/assets/skins/sam/logger.css" />
 <link rel="stylesheet" type="text/css" href="http://yui.yahooapis.com/2.5.2/build/fonts/fonts-min.css" />
@@ -11,16 +11,26 @@
 <!-- YUI -->
 <script src="js/yui/build/yui/yui-min.js" type="text/javascript"></script> 
 
-<!--  jsMocha -->
+<!-- jsMocha -->
+<script type="text/javascript" src="js/jsmocha/lib/jsmocha.js"></script>
+<script type="text/javascript" src="js/jsmocha/lib/jsmocha/expectation_list.js"></script>
+<script type="text/javascript" src="js/jsmocha/lib/jsmocha/expectation.js"></script>
+<script type="text/javascript" src="js/jsmocha/lib/jsmocha/parameters_matcher.js"></script>
+<script type="text/javascript" src="js/jsmocha/lib/jsmocha/mock.js"></script>
+<script type="text/javascript" src="js/jsmocha/lib/adapters/yui-adapter.js"></script>
+
+<!--  js_state_machine -->
 <script type="text/javascript" src="../lib/state_machine.js"></script>
 <script type="text/javascript" src="../lib/state_machine/machine.js"></script>
 <script type="text/javascript" src="../lib/state_machine/state.js"></script>
 <script type="text/javascript" src="../lib/state_machine/event.js"></script>
 <script type="text/javascript" src="../lib/state_machine/guard.js"></script>
 <script type="text/javascript" src="../lib/state_machine/transition.js"></script>
+<script type="text/javascript" src="../lib/state_machine/callback.js"></script>
 <script type="text/javascript" src="../lib/state_machine/state_collection.js"></script>
 <script type="text/javascript" src="../lib/state_machine/event_collection.js"></script>
 <script type="text/javascript" src="../lib/state_machine/guard_collection.js"></script>
+<script type="text/javascript" src="../lib/state_machine/callback_collection.js"></script>
 
 
 <!-- Test suit -->
@@ -28,6 +38,7 @@
 <script type="text/javascript" src="js/state_machine_tests.js"></script>
 <script type="text/javascript" src="js/transition_tests.js"></script>
 <script type="text/javascript" src="js/event_tests.js"></script>
+<script type="text/javascript" src="js/callback_tests.js"></script>
 
 </head>
 
